src/objects/Applied_Price_Adjustment__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_per_Watt__c</fullName>
        <label>Amount per Watt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apply_as_Net_Adjustment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Apply as Net Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Astrum_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Astrum Contract</label>
        <referenceTo>Astrum_Contract__c</referenceTo>
        <relationshipLabel>Applied Price Adjustments</relationshipLabel>
        <relationshipName>Applied_Price_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Adjustment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Channel Partner Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Dollar_Amount__c</fullName>
        <label>Effective Dollar Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>IF(Entitlement_Offer__c != null, Entitlement_Offer__r.End_Date__c, Promotion__r.End_Date__c)</formula>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entitlement_Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entitlement Offer</label>
        <referenceTo>Entitlement_Offer__c</referenceTo>
        <relationshipLabel>Applied Price Adjustments</relationshipLabel>
        <relationshipName>Applied_Price_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Rate__c</fullName>
        <label>Guaranteed Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <label>Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Procurement_Required__c</fullName>
        <formula>Entitlement_Offer__r.Procurement_Required__c</formula>
        <label>Procurement Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Production_Guarantee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Production Guarantee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Promotion_Type__c</fullName>
        <formula>Promotion__r.RecordType.DeveloperName</formula>
        <label>Promotion Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion</label>
        <referenceTo>Promotion__c</referenceTo>
        <relationshipLabel>Applied Price Adjustments</relationshipLabel>
        <relationshipName>Applied_Price_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>SCRB_SalesOrder__c</referenceTo>
        <relationshipLabel>Applied Price Adjustments</relationshipLabel>
        <relationshipName>Applied_Price_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <formula>IF(Entitlement_Offer__c != null, Entitlement_Offer__r.Start_Date__c, Promotion__r.Start_Date__c)</formula>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Line Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP Override</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Applied Price Adjustment</label>
    <nameField>
        <label>Applied Price Adjustment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applied Price Adjustments</pluralLabel>
    <recordTypes>
        <fullName>Dollar_Amount</fullName>
        <active>true</active>
        <label>Dollar Amount</label>
    </recordTypes>
    <recordTypes>
        <fullName>Percentage</fullName>
        <active>true</active>
        <label>Percentage</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rate</fullName>
        <active>true</active>
        <label>Rate</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>